[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aco-tsp"
version = "1.0.0"
description = "Ant Colony Optimization for the Traveling Salesman Problem — interactive GUI & library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["ant-colony", "optimization", "tsp", "traveling-salesman", "metaheuristic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.5",
]

[project.scripts]
aco-tsp = "main:main"

[tool.setuptools.packages.find]
include = ["aco_tsp*"]
